# polarimeter

./: .gitattributes  .gitignore  .jupytext.toml  AGENTS.md  codex_targets.yaml  readme.md  worklog.md
.githooks/: post-checkout  post-commit  post-merge  post-rewrite  pre-commit  pre-push
afterSRC/: run_afterSRC.sh  target.yaml  worklog.md
code/: CMakeLists.txt
code/apps/: dpol_batch.cpp  dpol_plot_cross_sections.cpp  dpol_tool.cpp
code/config/: beamtime_ch2.ini  default.ini  sekiguchi.ini
code/data/energy_lise/: 12C_C8H8_range_MeV_um.txt  1H_C8H8_dedx_MeV_um.txt  2H_C8H8_range_MeV_um.txt  ELoss_H1_C8H8.txt  ELoss_h2_C8H8.txt  H_c8h8_range.txt  dp_dc_kinematics.py  eloss2.C
code/data/observables/CompletSetOFT/: T.txt
code/include/dpolar/: acceptance.hpp  analysis.hpp  c_api.h  config.hpp  counts.hpp  energy_loss.hpp  inference.hpp  inference_plot.hpp  kinematics.hpp  observables.hpp  plotting.hpp  types.hpp
code/python/dpolar/: __init__.py  analysis.py  kinematics.py  scenario.py
code/src/: acceptance.cpp  analysis.cpp  c_api.cpp  config.cpp  counts.cpp  energy_loss.cpp  inference.cpp  inference_plot.cpp  kinematics.cpp  observables.cpp  plotting.cpp
code/tests/: test_main.cpp
docs/: BLP.md  RCNP BLP 设计细节查询.md  RCNP_BLP_drawings.md
dpolarization_archive/: FILE_INDEX.txt  README.md
infrontofSamuraiMag/: README.md  build_infrontofSamuraiMag.py  build_polarimeter.py  generate_infront.py  plan.md  pytest.ini  requirements-dev.txt  run_infrontofSamuraiMag.sh  run_tests_layered.sh  target.yaml  worklog.md
msu-tpc/: Target_mechanism_Jan_30_2018.stp  Target_mechanism_platform.stp  Tgt_ladder.stp
old-version/: all2.SLDASM  chamber_base.SLDPRT  conepipe.SLDPRT  polar_targetchamber.SLDPRT  (+6 more)
(+137 files in other folders)
